cc list updated
