# routes/close_contact.js
@@ -3,5 +3,5 @@ const closeContactControl = require('../controllers/close_contact');
 
 module.exports = app => {
     app.post('/close_contact/w/create', authenticate, authorize(['ADMIN', 'USER']), closeContactControl.insertData);
-    app.get('/close_contact/w/view/:empId', authenticate, authorize(['ADMIN']), closeContactControl.viewData);
+    app.get('/close_contact/w/view/:uuid', authenticate, authorize(['ADMIN']), closeContactControl.viewData);
 }
